--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,8 @@ dependencies:
   flutter:
     sdk: flutter
   cupertino_icons: ^0.1.3
+  dashed_circle: ^0.0.1
+  provider:
 
 dev_dependencies:
   flutter_test:
